--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ header {
     text-align: center;
     margin: 20px;
     font-size: 1.3rem;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid #ddd;
 }
 
 #todo-form {
@@ -39,7 +39,7 @@ header {
     padding-bottom: 20px;
     margin-left: 20px;
     margin-bottom: 20px;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid #ddd;
 }
 
 #todo-input {
@@ -52,6 +52,8 @@ header {
     height: 30px;
     width: 40px;
     font-size: 16px;
+    cursor: pointer;
+    border: 2px solid black;
 }
 
 #edit-form {
@@ -60,7 +62,7 @@ header {
     margin-left: 20px;
     margin-bottom: 20px;
     padding-bottom: 20px;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid #ddd;
 }
 
 #edit-input {
@@ -73,6 +75,9 @@ header {
     height: 30px;
     width: 100px;
     margin-top: 20px;
+    cursor: pointer;
+    border: 2px solid black;
+    font-weight: bold;
 }
 
 #toolbar {
@@ -81,7 +86,7 @@ header {
     margin-bottom: 20px;
     padding-bottom: 20px;
     font-size: 20px;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid #ddd;
     width: 90%;
 }
 
@@ -93,6 +98,8 @@ header {
 #erase-button {
     width: 40px;
     height: 30px;
+    cursor: pointer;
+    border: 2px solid black;
 }
 
 #filter {
@@ -100,6 +107,7 @@ header {
 }
 
 #filter-select {
+    flex: 1;
     text-align: center;
     height: 30px;
     width: 90px;
@@ -107,4 +115,44 @@ header {
 
 #todo-list {
     display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.todo {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+    padding: 1rem;
+    margin: 10px;
+}
+
+.todo h3 {
+    flex: 1;
+}
+
+.todo button {
+    margin-left: 10px;
+    height: 30px;
+    width: 40px;
+    cursor: pointer;
+    border: 2px solid black;
+}
+
+.done {
+    background-color: #395169;
+    font-style: italic;
+    color: white;
+    text-decoration: line-through;
+}
+
+button:hover {
+    background-color: #395169;
+    color: white;
+    transition: .3s;
+}
+
+button:focus {
+
 }
