--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ header {
     height: 30px;
     width: 40px;
     font-size: 16px;
+    padding: .3rem .6rem;
     cursor: pointer;
     border: 2px solid black;
 }
@@ -81,6 +82,7 @@ header {
     cursor: pointer;
     border: 2px solid black;
     font-weight: bold;
+    padding: .3rem .6rem;
 }
 
 #toolbar {
@@ -103,6 +105,7 @@ header {
     height: 30px;
     cursor: pointer;
     border: 2px solid black;
+    padding: .3rem .6rem;
 }
 
 #filter {
@@ -141,6 +144,7 @@ header {
     width: 40px;
     cursor: pointer;
     border: 2px solid black;
+    padding: .3rem .6rem;
 }
 
 .done {
