--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ button {
     align-items: center;
     transition: 0.4s ;
     cursor: pointer;
+    width: 40px;
 }
 
 button:hover {
@@ -60,105 +61,100 @@ input, select {
     background-color: white;
     border-radius: 10px;
     width: 460px;
-    margin: 3rem 0 auto;
+    margin: 3rem auto;
     padding: 1.5rem;
 }
 
-header {
+.container-principal header {
     text-align: center;
+    padding: 0 1rem 1rem;
     font-size: 1.3rem;
     border-bottom: 1px solid #ddd;
 }
 
-#todo-form {
+#todo-form, #edit-form {
     display: inline-block;
     font-size: 20px;
-    padding-bottom: 20px;
+    padding: 1rem;
     margin-top: 20px;
     border-bottom: 1px solid #ddd;
 }
 
-#todo-input {
-    width: 250px;
-    height: 30px;
-    text-align: left;
+#todo-form p, #edit-form p {
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+}
+
+#control-form {
+    display: flex;
 }
 
 #control-form button {
-    height: 30px;
-    width: 40px;
-    font-size: 16px;
-}
-
-#edit-form {
-    font-size: 20px;
-    margin-top: 20px;
-    padding-bottom: 20px;
-    border-bottom: 1px solid #ddd;
-}
-
-#edit-input {
-    width: 250px;
-    height: 30px;
-    text-align: left;
+    margin-left: 0.3rem;
 }
 
 #cancel-edit-btn {
     height: 30px;
     width: 100px;
-    margin-top: 20px;
+    margin-top: 1rem;
 }
 
 #toolbar {
     display: flex;
     margin-top: 20px;
-    padding-bottom: 20px;
+    padding: 1rem;
     font-size: 20px;
     border-bottom: 1px solid #ddd;
-    width: 90%;
+}
+
+#toolbar h4 {
+    margin-bottom: 0.5rem;
+}
+
+#search {
+    border-right: 1px solid #ddd;
+    padding-right: 1rem;
+    margin-right: 1rem;
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+}
+
+#search form {
+    display: flex;
 }
 
 #search-input {
-    width: 250px;
-    height: 30px;
-}
-
-#erase-button {
-    width: 40px;
-    height: 30px;
+    width: 100%;
+    margin-right: 0.3rem;
 }
 
 #filter {
-    margin-left: 15px;
-}
-
-#filter-select {
-    flex: 1;
-    text-align: center;
-    height: 30px;
-    width: 90px;
-}
-
-#todo-list {
+    width: 35%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+}
+
+#filter select {
+    flex: 1;
 }
 
 .todo {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border-bottom: 1px solid #ddd;
     padding: 1rem;
+    border-bottom: 1px solid #ddd;
+    transition: 0.3s;
 }
 
 .todo h3 {
     flex: 1;
+    font-size: 0.9rem;
 }
 
 .todo button {
-    margin-left: 10px;
+    margin-left: 0.4rem;
     height: 30px;
     width: 40px;
 }
@@ -169,4 +165,17 @@ header {
     color: white;
     text-decoration: line-through;
 }
+
+#todo-input {
+    width: 250px;
+    height: 30px;
+}
+
+
+
+
+
+
+
+
 
